k8s/backend-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: prod
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
