k8s/frontend-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: prod
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
