k8s/ingress-dev-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskflow-dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: dev.dattasr.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
