k8s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskflow-dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "datta"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: dev.dattasr.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          - path: /home
            pathType: suffix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
